--- a/WEBDRIVER_API_MAIVT-master/.project
+++ b/WEBDRIVER_API_MAIVT-master/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WEBDRIVER_API_MAIVT_</name>
+	<name>WEBDRIVER_API_MAIVT</name>
 	<comment></comment>
 	<projects>
 	</projects>
