--- a/WEBDRIVER_API_MAIVT-master/.settings/org.eclipse.core.resources.prefs
+++ b/WEBDRIVER_API_MAIVT-master/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/selenium/Topic_09_Radio_CheckBox_Alert.java=UTF-8
+encoding//src/selenium/Topic_10_Radio_UserInteraction.java=UTF-8
