--- a/WEBDRIVER_API_MAIVT-master/.settings/org.eclipse.core.resources.prefs
+++ b/WEBDRIVER_API_MAIVT-master/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/selenium/Topic_09_Radio_CheckBox_Alert.java=UTF-8
 encoding//src/selenium/Topic_10_Radio_UserInteraction.java=UTF-8
+encoding//src/selenium/Topic_11_Popup_Ifame.java=UTF-8
+encoding//src/selenium/Topic_12_Javascript_Excutor_UploadFile.java=UTF-8
